[fix] close issue #4: lower vertical shifting of the sidelinks

--- a/site/css/all.dev.css
+++ b/site/css/all.dev.css
@@ -709,7 +709,7 @@
     .nav-sidelinks
     {
         position: relative;
-        top: -4.077em;
+        top: -1.538em;
         float: left;
         width: 10.231em;
         margin-left: -10.231em;
